# VISTA

./: .gitignore  README.md  app.py  download.py  eval.py  extract_frames.py  main.py  pyproject.toml  qwen_quant.py  qwen_quant_unsloth.py  qwen_vl_cli.py  qwen_yolo.py  s_annotate.sh  s_download.sh  visdrone.py
config/VistaSynth/: base.yaml  sam.yaml  train.yaml  train_sam3.yaml
config/bike/: cfg.yaml  cfg10.yaml  cfg11.yaml  cfg12.yaml  cfg13.yaml  cfg14.yaml  cfg2.yaml  cfg3.yaml  cfg4.yaml  cfg5.yaml  cfg6.yaml  cfg7.yaml  cfg8.yaml  cfg9.yaml
config/qwenyolo/: cfg1.yaml  cfg10.yaml  cfg11.yaml  cfg12.yaml  cfg13.yaml  cfg14.yaml  cfg15.yaml  cfg16.yaml  cfg17.yaml  cfg18.yaml  cfg19.yaml  cfg2.yaml  cfg20.yaml  cfg21.yaml  cfg22.yaml  cfg23.yaml  cfg24.yaml  cfg25.yaml  cfg25_bis.yaml  cfg25_tris.yaml  cfg26.yaml  cfg27.yaml  cfg28.yaml  cfg29.yaml  cfg3.yaml  cfg30.yaml  cfg31.yaml  cfg32.yaml  cfg32_bis.yaml  cfg32_quad.yaml  cfg32_tris.yaml  cfg4.yaml  cfg5.yaml  cfg6.yaml  cfg7.yaml  cfg8.yaml  cfg9.yaml
config/sample/: cfg.yaml  cfg2.yaml  cfg3.yaml  cfg4.yaml  cfg5.yaml  cfg6.yaml  cfg7.yaml
config/sim18/: cfg31.yaml  cfg32.yaml  cfg33.yaml  cfg34.yaml  cfg35.yaml  cfg36.yaml  cfg37.yaml  cfg38.yaml  cfg39.yaml
hpc/: condor  condor_grid  launch_computational  launch_computational_exe  launch_run  launch_run_exe  sync.py  train_dcama
notebooks/: aggregate.ipynb
vista/: evaluate.py  moondream.py  omdetturbo.py  qwen.py  stats.py  utils.py
vista/models/: __init__.py  moondream.py  omdetturbo.py  rtdetr.py  validator.py  yolo.py  yoloe.py
(+37 files in other folders)
