[project]
name = "DroneAmbulanceAI"
version = "0.1.0"
requires-python = "==3.10.13"
dependencies = [
    "bitsandbytes>=0.49.0",
    "decord>=0.6.0",
    "flashinfer-python>=0.5.3",
    "gradio~=5.49.1",
    "huggingface-hub>=0.36.0",
    "json-repair>=0.52.4",
    "lovely-tensors>=0.1.20",
    "notebook>=7.5.1",
    "opencv-python>=4.12.0.88",
    "optuna>=4.8.0",
    "pyvips>=3.1.1",
    "qwen-vl-utils>=0.0.14",
    "sam3>=0.1.3",
    "torch~=2.8.0",
    "torchvision>=0.23.0",
    "transformers[torch]~=4.57.1",
    "ultralytics>=8.4.27",
    "unsloth>=2025.12.8",
    "vllm>=0.11.0",
    "wget>=3.2",
]
